# llumen

./: .gitignore  .rules  AGENTS.md  BUG_REPRODUCTION.md  BUILD.md  CONTRIBUTING.md  DEV.md  Dockerfile  FIX_SUMMARY.md  LICENSE  NOTICE  NOTICES  README.demo.md  README.md  README.zh-tw.md  README_zh-CN.md  README_zh-TW.md  demo.patch  demo.sql  docker-compose.yml  flake.nix  last-two-commits.patch  title_generation.prompt.yml
.github/: copilot-instructions.md
.github/workflows/: build-binaries.yml  check.yml  (+10 more)
agent/: .gitignore  AGENTS.md
backend/: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  THIRDPARTY.toml  flake.nix  justfile  migrate.sql  rustfmt.toml  schema.sql
backend/.cargo/: audit.toml
backend/data/: blobs.redb  db.sqlite
backend/entity/: Cargo.toml  build.rs
backend/entity/src/: lib.rs  patch.rs
backend/entity/src/entities/: chat.rs  chunk.rs  config.rs  file.rs  mcp_server.rs  message.rs  mod.rs  model.rs  prelude.rs  tool.rs  user.rs
backend/entity/src/models/: .gitignore  mod.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250724_144358_create_tables.rs  m20250814_065208_add_default_config.rs  m20250824_044739_add_user_config.rs  m20250828_114136_add_default_model.rs  m20250828_123532_add_default_model.rs  m20250905_055820_tools.rs  m20251219_060552_add_embedding.rs  m20251227_085232_add_valid_until_to_file.rs  m20260213_create_mcp_server.rs  main.rs
backend/migration/src/m20250908_082005_create_table/: chat.rs  chunk.rs  config.rs  default.rs  entity.rs  file.rs  message.rs  mod.rs  model.rs  tool.rs  user.rs  wal.rs
backend/protocol/: Cargo.toml
backend/protocol/src/: lib.rs
backend/runner/: Cargo.toml
backend/runner/src/: config.rs  lib.rs  runner.rs  state_tree.rs
backend/src/: config.rs  errors.rs  main.rs
backend/src/chat/: channel.rs  channel_test.rs  context.rs  converter.rs  deep_prompt.rs  deep_research.rs  helper.rs  mod.rs  model_strategy.rs  prompt.rs  session.rs  stream_buffer.rs  stream_writer.rs  token.rs  token_sink.rs  tools.rs
backend/src/chat/agent/: chat.rs
backend/src/chat/agents/: mod.rs  normal.rs  search.rs
backend/src/chat/agents/deep/: agent.rs  mod.rs
backend/src/chat/channel/: inner.rs  mergeable.rs  mod.rs  publisher.rs  subscriber.rs  tests.rs
backend/src/chat/configs/: builder.rs  configuration.rs  executor.rs  mod.rs  normal.rs  search.rs
backend/src/chat/configs/deep/: agent.rs  helper.rs  mod.rs
backend/src/chat/pipeline/: chat.rs  execution.rs  helper.rs  message_builder.rs  mod.rs  model_strategy.rs  normal.rs  processor.rs  runner.rs  search.rs
backend/src/chat/pipeline/deep/: agent.rs  mod.rs
backend/src/chat/pipelines/: mod.rs  normal.rs
backend/src/chat/process/: chat.rs  helper.rs  mod.rs
backend/src/chat/processes/: deep.rs  mod.rs  normal.rs  search.rs
backend/src/chat/processes/deep/: agent.rs  helper.rs  mod.rs  prompt.rs
backend/src/chat/strategies/: deep_research.rs  media.rs  mod.rs  normal.rs  search.rs
backend/src/chat/tools/: crawl.rs  lua.rs  media.rs  media_image.rs  mod.rs  web_search.rs
backend/src/chat/tools/runner/: config.rs  error.rs  mod.rs  runner.rs  tools.rs
backend/src/mcp/: client.rs  config.rs  manager.rs
backend/src/middlewares/: auth.rs  cache_control.rs  compression.rs  logger.rs  mod.rs
backend/src/openrouter/: annotation.rs  capability.rs  chat.rs  chat_completions.rs  completion.rs  error.rs  image_gen.rs  listing.rs  message.rs  mod.rs  model.rs  model_cache.rs  openrouter.rs  option.rs  raw.rs  stream.rs  test.rs  video_gen.rs
backend/src/openrouter/stream_encode/: base64_encoder.rs  chunked_stream.rs  json_serializer.rs  mod.rs
backend/src/prompts/: agent.rs  chat.rs  mod.rs  search.rs  title_gen.rs
backend/src/routes/: mod.rs  proxy.rs  spa.rs
backend/src/routes/auth/: header_auth.rs  helper.rs  login.rs  mod.rs  renew.rs
backend/src/routes/chat/: create.rs  delete.rs  halt.rs  mod.rs  paginate.rs  read.rs  sse.rs  update.rs  write.rs
backend/src/routes/file/: download.rs  image.rs  mod.rs  refresh.rs  upload.rs
backend/src/routes/mcp/: check.rs  create.rs  delete.rs  list.rs  mod.rs  write.rs
backend/src/routes/message/: create.rs  delete.rs  mod.rs  paginate.rs  write.rs
backend/src/routes/model/: check.rs  create.rs  delete.rs  ids.rs  list.rs  mod.rs  read.rs  write.rs
backend/src/routes/user/: create.rs  delete.rs  info.rs  list.rs  mod.rs  read.rs  update.rs
backend/src/runner/: error.rs  runner.rs  tools.rs
backend/src/sse/: assistant_message.rs  buffer.rs  context.rs  mod.rs  publisher.rs  subscriber.rs
backend/src/tools/: mod.rs  set.rs  store.rs  tool.rs
backend/src/tools/mail/: mod.rs
backend/src/tools/nearbyplace/: mod.rs
backend/src/tools/rss/: mod.rs
backend/src/tools/wttr/: mod.rs
backend/src/utils/: blob.rs  chat.rs  cli.rs  config.rs  environment.rs  file_cleanup.rs  http.rs  logger.rs  mod.rs  model.rs  password_hash.rs  sse.rs  url_validation.rs  webp.rs
backend/xtask/: Cargo.toml
backend/xtask/src/: main.rs
development/: README.md  api-mutation-pattern.md  frontend-http.md  frontend-svelte-ts.md  svelte.md
devlopment/: api-convention.md  git-ops.md  markdown-parser.md  merge-and-multiplex.md  message-version.md
docker/: Dockerfile  Dockerfile.frontend  install-zig.sh  manifest.yml  nginx.conf
docs/: .gitignore  AGENTS.md  DEMO_DEPLOYMENT.md  README.md  design.md  docs.json  docusaurus.config.ts  index.mdx  overview.md  package.json  pnpm-lock.yaml  refenence.md  release.md  sidebars.ts  todo.md  user.md
frontend/: .gitignore  AGENTS.md  THIRDPARTY.txt  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.js  vitest.config.js
package/: Dockerfile  Dockerfile.nightly  build-artifacts-windows.sh  build-artifacts.sh  build-docker-artifacts.sh
prompts/: .gitignore  coordinator.md  normal.j2  normal.md  promptfooconfig.yaml  search.md  title_generation.j2  title_generation.md
rssfeed/: feed.xml  gen_keyword.py  retrieve.py  sports.xml  world.xml  xmlrss_10_60.xml
(+588 files in other folders)
