[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[features]
default = []
dev = []


[workspace]
members = [".", "entity", "migration"]

[dependencies]
axum = "0.8.4"
dotenv = "0.15.0"
pasetors = "0.7.7"
serde_json = "1.0.141"
typeshare = "1.0.4"
entity = { path = "entity" }
migration = { path = "migration" }
anyhow = "1.0.98"
futures-util = "0.3.31"
reqwest-eventsource = "0.6.0"
toml = "0.9.4"
tracing = "0.1"
tracing-subscriber = "0.3"
rust-argon2 = "3.0.0"
libc = "0.2.174"
tower = "0.5.2"
http = "1.3.1"
openrouter-rs = "0.4.5"
time = "0.3.41"
fastrand = "2.3.0"
base64 = "0.22.1"

[dependencies.tower-http]
version = "0.6.6"
features = ["cors"]

[dependencies.reqwest]
version = "0.12.22"
default-features = false
features = ["json", "native-tls-vendored", "charset", "http2"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.tokio]
version = "1.46.1"
features = [
  "macros",
  "rt-multi-thread",
  "sync"
]

[dependencies.sea-orm]
version = "1.1.14"
features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros"
]
