[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[features]
default = []
dev = []

[profile.release]
opt-level = "s"
lto = true

[workspace]
members = [".", "entity", "migration", "runner"]

[dependencies]
dotenv = "0.15.0"
pasetors = "0.7.7"
serde_json = "1.0.141"
typeshare = "1.0.4"
entity = { path = "entity" }
migration = { path = "migration" }
runner = { path = "runner" }
anyhow = "1.0.98"
futures-util = "0.3.31"
reqwest-eventsource = "0.6.0"
toml = "0.9.4"
rust-argon2 = "3.0.0"
tower = "0.5.2"
http = "1.3.1"
fastrand = "2.3.0"
minijinja = "2.12.0"
base64 = "0.22.1"
schemars = "1.0.4"
redb = "3.1.0"
regex = "1.11.2"
flexi_logger = "0.31.4"
bytes = "1.10.1"

[dependencies.axum]
 version = "0.8.4"
 features = ["multipart"]

[dependencies.tokio-stream]
version = "0.1.17"
default-features = false
features = ["sync"]

[dependencies.log]
version = "0.4.28"
features = ["release_max_level_debug"]

[dependencies.time]
version = "0.3.41"
features = ["macros"]

[dependencies.tower-http]
version = "0.6.6"
features = ["cors", "fs", "compression-zstd"]

[dependencies.reqwest]
version = "0.12.22"
default-features = false
features = ["json", "native-tls-vendored", "charset", "http2"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.tokio]
version = "1.46.1"
features = ["macros", "rt-multi-thread", "sync", "signal"]

[dependencies.sea-orm]
version = "1.1.14"
features = ["sqlx-sqlite", "runtime-tokio", "macros"]
