[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[features]
default = []
dev = []
tracing = ["dep:tokio-console", "dep:tracing", "dep:console-subscriber", "dep:tracing-subscriber", "tokio/tracing"]

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
incremental = false

[workspace]
members = [".", "entity", "migration", "protocol"]

[dependencies]
dotenv = "0.15.0"
pasetors = "0.7.7"
serde_json = "1.0.141"
typeshare = "1.0.4"
entity = { path = "entity" }
migration = { path = "migration" }
protocol = { path = "protocol" }
anyhow = "1.0.98"
futures-util = "0.3.31"
reqwest-eventsource = "0.6.0"
toml = "0.9.4"
rust-argon2 = "3.0.0"
tower = "0.5.2"
http = "1.3.1"
minijinja = "2.12.0"
base64 = "0.22.1"
schemars = "1.0.4"
redb = "3.1.0"
regex = "1.11.2"
bytes = "1.10.1"
log_err = "1.1.1"
mimalloc = "0.1.48"
html2text = "0.13.1"
urlencoding = "2.1.3"
html5ever = "0.35.0"
scraper = "0.24.0"
ipnetwork = "0.21.1"
csv = "1.4.0"
infer = "0.19.0"
webp = "0.3.1"
getrandom = "0.3.4"

[dependencies.rust-embed-for-web]
version = "11.3.0"
default-features = false

[dependencies.image]
version = "0.25.9"
default-features = false
features = ["jpeg", "png"]

[dependencies.sqlx]
version = "0.8.6"
features = ["runtime-tokio", "sqlite"]

[dependencies.axum]
 version = "0.8.4"
 features = ["multipart"]

[dependencies.tokio-stream]
version = "0.1.17"
default-features = false
features = ["sync"]

[dependencies.log]
version = "0.4.28"
features = ["release_max_level_debug"]

[dependencies.time]
version = "0.3.41"
features = ["formatting", "macros", "parsing", "local-offset"]

[dependencies.tower-http]
version = "0.6.6"
features = ["cors", "fs", "compression-zstd"]

[dependencies.reqwest]
version = "0.12.22"
default-features = false
features = ["json", "native-tls-vendored", "charset", "http2"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.tokio]
version = "1.46.1"
features = ["macros", "rt-multi-thread", "sync", "signal", "tracing"]

[dependencies.sea-orm]
version = "1.1.14"
features = ["sqlx-sqlite", "runtime-tokio", "macros"]

[dependencies.flexi_logger]
version = "0.31.4"
default-features = true

[dependencies.mlua]
version = "0.11.4"
default-features = false
features = ["luau", "vendored", "anyhow", "serialize", "async", "send"]

[dependencies.tokio-console]
version = "0.1.12"
optional = true

[dependencies.tracing]
version = "0.1.41"
optional = true

[dependencies.console-subscriber]
version = "0.5.0"
optional = true

[dependencies.tracing-subscriber]
version = "0.3.20"
optional = true
