[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
pasetors = "0.7.7"

[dependencies.tokio]
version = "1.46.1"
features = ["macros", "rt"]

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "sqlx-sqlite",
  "runtime-tokio",
]
