[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "migration"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "migration"
path = "src/lib.rs"

[features]
cli = ["sea-orm-migration/cli"]
default = []

[dependencies]
pasetors = "0.7.7"

[dependencies.tokio]
version = "1.46.1"
features = ["macros", "rt"]

[dependencies.sea-orm-migration]
default-features = true
version = "1.1.0"
features = [
  "sqlx-sqlite",
  "runtime-tokio",
  "cli" # enable only binary
]
